Aligned the space-images section. Removed 2 images. Re-sized the main image. and fixed the media query.

--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,20 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width:500px) {
+  .home .space-images img {
+    width: 93%;
+    padding-left: 2%;
+  }
+}
+@media (max-width:500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
